garfiedl/src/css/index.css
:root {
  --font: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  font-family: var(--font);
  line-height: 1.5;
  font-weight: 400;

  background-color: #242424;

  --main-text-color: rgba(255, 255, 255, 0.87);
  color: var(--main-text-color);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  /* --section-sjhadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
  /* --section-shadow-2: rgba(0, 0, 0, 0.25) 0px 54px 75px, rgba(0, 0, 0, 0.12) 0px -12px 50px, rgba(0, 0, 0, 0.12) 0px 4px 10px, rgba(0, 0, 0, 0.17) 0px 12px 24px, rgba(0, 0, 0, 0.09) 0px -3px 10px; */
  --garf-color: #f8a5c2;
  --garf-color-50: #f8a5c2aa;
  --bad-color: #ed8c8c;
  --section-background: #282828;
  --section-background-hover: #2c2c2c;
  --transparent-section-background: #28282888;
  --section-border: #66666644;
  --section-border-2: #88888844;
  --section-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
  --section-shadow-2: rgba(0, 0, 0, 0.15) 0px 4px 16px;
  /* --icon-on-gradient-filter: invert(100%); */
  --text-on-gradient-color: black;
  --modal-content-background-color: #1c1c1c;
  --modal-background-color: rgba(0, 0, 0, 0.4);

  --placeholder-text-color: rgba(255, 255, 255, 0.5);
}

::selection {
  background-color: var(--garf-color-50);
  color: var(--text-on-gradient-color);
  border-radius: 12px;
}

img {
  user-select: none;
}

input,
textarea {
  color: #ffffff;
  font-family: var(--font);
}

* {
  min-width: 0;
  min-height: 0;
}

a.undecorated {
  color: inherit;
  text-decoration: inherit;
}

a * {
  cursor: pointer;
}

a {
  color: var(--garf-color);
  cursor: pointer;
  text-decoration: underline;
}

#page-container {
  display: flex;
  min-width: 100vw;
  min-height: 100vh;
  flex-direction: column;
}

#header {
  padding: 18px;
  margin: 18px;
  border-radius: 12px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: stretch;
  flex: 0 0 48px;
}

.section {
  box-shadow: var(--section-shadow);
  background-color: var(--section-background);
  border: 1px solid var(--section-border);
  transition: box-shadow ease 200ms;
}

.section:hover {
  box-shadow: var(--section-shadow-2);
}

#header>* {
  display: flex;
  align-items: center;
}

#header> :first-child {
  justify-self: start;
}

#header> :last-child {
  justify-self: end;
}

.button-component {
  padding: 12px;
  background: unset;
  border: unset;
  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
  background-color: var(--garf-color);
  color: black;
  font-family: var(--font);
  font-size: 12pt;
  border-radius: 12px;
  transition: ease 200ms;
  align-self: stretch;
  cursor: pointer;
}

.button-component.dark {
  background-color: transparent;
  border: 1px solid var(--section-border-2);
  color: var(--main-text-color);
}

.button-component.dark:hover {
  backdrop-filter: brightness(125%);
}

.button-component:hover {
  filter: brightness(110%);
}

.button-component:active {
  transform: translateY(2px);
  filter: brightness(120%);
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100%;
}

.login-container {
  width: 480px;
  height: 640px;
  align-self: center;
  border-radius: 24px;
  transition: box-shadow ease 200ms;
  padding: 24px;
  display: flex;
  flex-direction: column;
}

.login-container-content {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  gap: 24px;
  align-items: center;
}

@media screen and (max-width: 600px) {
  #page-container {
    max-width: 100vw;
  }

  .login-container {
    width: calc(100% - 50px);
    max-height: calc(100% - 50px);
    border-radius: 0;
  }

  .login-container-content>* {
    max-width: 100%;
  }

  .hide-on-small-view {
    display: none;
  }
}

hr {
  border-color: var(--garf-color);
  border-width: 3px;
  border-radius: 3px;
  border-style: solid;
  margin: 0;
  align-self: center;
}

.login-container-content>.login-title {
  font-size: 24pt;
  font-weight: bold;
  text-align: center;
}

.login-back {
  flex-basis: 72px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.login-form {
  flex-grow: 1;
  width: min(384px, calc(100% - 12px));
  display: flex;
  flex-direction: column;
  align-items: stretch;
  gap: 12px;
}

.login-form>div:first-child {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  gap: 12px;
}

.text-input-component {
  padding: 12px;
  border-radius: 12px;
  font-size: 18px;
  border: 1px solid var(--section-border-2)
}

textarea.text-input-component {
  resize: none;
}

.text-input-component:focus {
  outline: 1px solid var(--garf-color);
}

.center-text {
  text-align: center;
}

.login-form>div:nth-child(2) {
  flex-basis: 36px;
  display: flex;
  align-items: center;
  justify-content: end;
  flex-grow: 1;
  flex-direction: column;
}

.background-element {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: var(--background-element-background);
  z-index: -1;
}

.login-incorrect-warning {
  color: var(--bad-color);
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 12pt;
}

.login-incorrect-warning> :first-child {
  text-align: center;
}

.modal {
  position: fixed;
  z-index: 20;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: var(--modal-background-color);
  font-size: initial;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.modal>div {
  max-width: min(calc(100% - 16px), 480px);
}

.modal>div.size-1 {
  max-width: min(90%, 960px);
}

.modal-content {
  background-color: var(--modal-content-background-color);
  margin: 0 auto;
  padding: 20px;
  border: 1px solid var(--modal-border-color);
  width: calc(100% - 40px);
}

.shadow {
  box-shadow: var(--section-shadow);
}

.hide-scrollbar::-webkit-scrollbar {
  display: none;
}

.hide-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.modal-body {
  background-color: var(--modal-content-background-color);
  width: 500px;
  height: 300px;
  border-radius: 12px;
  display: flex;
  flex-direction: column;
  animation: modal-appear 250ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
  animation-iteration-count: 1;
  margin: 30px 0;
  max-height: 100vh;
  overflow-y: auto;
  overflow-x: clip;
  border: none;
}

.modal-head-content {
  /* font-family: "Montserrat"; */
  font-size: 20pt;
  flex: 1 0;
  text-align: center;
  color: var(--text-on-gradient-color);
  white-space: nowrap;
}

@media screen and (max-width: 512px) {
  .modal-head-close {
    transform: translateX(10px) translateY(-16px);
  }
}

.modal-head-close {
  margin-right: 5px;
  margin-left: -55px;
  margin-top: -15px;
  margin-bottom: -15px;
  cursor: pointer;
}

.modal-head-close>img {
  margin: 15px;
  vertical-align: middle;
  filter: var(--icon-on-gradient-filter);
}

.modal-head {
  flex: 0 0 75px;
  background: linear-gradient(135deg,
      var(--garf-color) 0%,
      var(--garf-color) 100%);
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
  margin: -1px;
  display: flex;
  align-items: center;
  position: sticky;
  top: 0px;
  z-index: 1;
}

@keyframes modal-appear {
  from {
    transform: scale(80%);
  }

  to {
    transform: scale(100%);
  }
}

.modal-content {
  flex: 1 0 0;
  font-size: 16pt;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 20px;
  text-align: center;
  min-height: auto;
}

.username-editor {
  display: flex;
  flex-direction: row;
  gap: 0;
}

.username-editor> :first-child {
  cursor: default;
  border-right: none;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.username-editor> :nth-child(2) {
  flex-grow: 1;
}

.username-editor> :nth-child(2)>.text-input-component {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  height: 27px;
}

.username-picker> :first-child {
  /* color: var(--garf-color) */
  margin-left: auto;
  margin-right: auto;
}

.username-picker {
  border: 1px solid var(--section-border-2);
  border-radius: 12px;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 18px;
  padding-top: 12px;
  flex-basis: 120px;
  justify-content: center;
}

.username-picker> :nth-child(2) {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 8px;
}

.garfield-image {
  border: 1px solid white;
}

.no-access {
  pointer-events: none;
  filter: saturate(0.25) opacity(50%);
}

.icon-container {
  display: grid;
  place-items: center;
  line-height: 0;
  max-height: 100%;
  max-width: 100%;
  border-radius: 12px;
  transition: backdrop-filter 250ms ease;
}

.icon-container:hover {
  backdrop-filter: brightness(125%);
}

.icon-container img {
  width: 100%;
  height: 100%;
  filter: invert(100%);
}

.icon-container * {
  line-height: normal;
}

